name:                rraw
version:             0.1.0.0
synopsis:            interpreter for rogue's core language, rraw
homepage:            http://github.com/lord/rogue
author:              PLR
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lang.Rogue.Raw
  build-depends:       base
                     , dlist
                     , regex-tdfa
  default-language:    Haskell2010

executable rraw
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rraw
  default-language:    Haskell2010

test-suite rraw-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
